--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
 				<ul class="nav nav-pills nav-stacked">
-					<li class="active"><a data-toggle="tab" href="#home">Cek Rute</a></li>
+					<li class=""><a data-toggle="tab" href="#home">Cek Rute</a></li>
 					<li><a data-toggle="tab" href="#menu1">Asrama (1)</a></li>
 					<li><a data-toggle="tab" href="#menu2">Menwa (1)</a></li>
 					<li><a data-toggle="tab" href="#menu3">Stasiun UI (1)</a></li>
