--- a/home.html
+++ b/home.html
@@ -33,9 +33,11 @@
 							<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <!-- Septnes1 --> <ins class="adsbygoogle nesaba_media" style="display:inline-block" data-ad-client="ca-pub-9775189403999799" data-ad-slot="5832826743"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 						
 			<h2 style="text-align:center;text-transform:uppercase">Jadwal <br>Keberangkatan Bikun<br></h1>
-										<div class="dropdown" style="text-align:center">							<button style="background:black; color:white" class="btn btn-secondary"><a data-toggle="tab" href="#home" style="color:white">Cek Rute</a></button>
+			
+										<div class="dropdown" style="text-align:center">							
+											<button style="background:orange; color:white" class="btn btn-secondary"><a data-toggle="tab" href="#home" style="color:white">Cek Rute</a></button>
 				
-		<button style="background:black; color:white;text-transform:uppercase" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong>Kamu dimana?</strong></button>
+		<button style="background:orange; color:white;text-transform:uppercase" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong>Kamu dimana?</strong></button>
 
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="width:47%"> 
 				<ul class="nav nav-pills nav-stacked">
