--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <head>
 				<title></title>
+<link rel="stylesheet" href="https://mobilekit.bragherstudio.com/view10/assets/css/style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 				</script>
 				<script> $(function(){ $("#header").load("header.html"); $("#footer").load("footer.html"); }); 
