--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 				<div id="header"></div> 
-				hy
+				hy gundulmu
 				<!--Remaining section--> 
 				<div id="footer"></div>
 				
